@@ -1,5 +1,7 @@
 *SVN*
 
+* Fix routing to respect user provided requirements and defaults when assigning default routing options (such as :action => 'index'). Closes #5950. [Nicholas Seckar]
+
 * Rescue Errno::ECONNRESET to handle an unexpectedly closed socket connection. Improves SCGI reliability.  #3368, #6226 [sdsykes, fhanshaw@vesaria.com]
 
 * Added that respond_to blocks will automatically set the content type to be the same as is requested [DHH]. Examples:
